--- a/Cliente/package.json
+++ b/Cliente/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-cookies": "^0.1.1",
@@ -51,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
