--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^18.1.10",
     "minireset.css": "~0.0.4",
+    "ngx-bootstrap": "^18.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
